Fri Jan 14 14:01:12 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* pack.c (pack_unpack): the resulted string of unpack('M') must have
	  ASCII-8BIT encoding (and ENC_CODERANGE_VALID). [ruby-core:34482]

Sat Dec 25 20:01:40 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (pipe_open): Added rb_thread_atfork(). We must reinitialize
	  GVL at new process creation.

Sat Feb  5 10:09:31 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_get_expanded_load_path): always expand load paths.

Tue Jul  6 22:57:21 2010  Tanaka Akira  <akr@fsij.org>

	* io.c (nogvl_copy_stream_sendfile): jump to retry_sendfile directly
	  to avoid select() on a socket which TCP state is CLOSED.
	  patch by Eric Wong.  [ruby-core:31053]

Mon May 30 15:44:16 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (opt_mult): as r31805, volatile it.
	  Without this, clang -O fails calculation.

	* numeric.c (fix_mul): ditto.

	* rational.c (f_imul): ditto.

Mon May 30 10:26:51 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (int_pow): make sure to assign the result of x * z.
	  If xz is optimized out, the value won't overflow.

Sun May 29 15:09:05 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_round): fix for negative value.

Sat May 28 03:04:27 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (fill_cbuf): return MORE_CHAR_SUSPENDED when cbuf is not empty.

Fri May 27 22:38:54 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fill_cbuf): finish reading at EOF.

Fri May 27 11:31:51 2011  misfo <tedwardo2@gmail.com>

	* lib/rexml/text.rb (REXML::Text#initialize): prevent an error
	  when passing a frozen string to REXML::Text.new

	  dup the string passed in instead of cloning so that it's frozen
	  state is ignored

Sun May 22 07:10:25 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_pkey_dsa.rb: Add tests for sign/verify.

Thu May 19 07:47:26 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>
